// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResolutionBox render() handles default 1`] = `
<div
  className="box"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "paddingBottom": 15,
    }
  }
>
  <span
    className="icon icon-checkmark"
    style={
      Object {
        "position": "static",
        "top": 0,
      }
    }
  />
  <p
    className="truncate break-all"
    style={
      Object {
        "paddingBottom": 0,
        "paddingLeft": 16,
      }
    }
  >
    This issue has been marked as resolved.
  </p>
</div>
`;

exports[`ResolutionBox render() handles inCommit 1`] = `
<div
  className="box"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "paddingBottom": 15,
    }
  }
>
  <span
    className="icon icon-checkmark"
    style={
      Object {
        "position": "static",
        "top": 0,
      }
    }
  />
  <p
    className="truncate break-all"
    style={
      Object {
        "paddingBottom": 0,
        "paddingLeft": 16,
      }
    }
  >
    <span
      key="3"
    >
      <span
        key="0"
      >
        This issue has been marked as resolved by 
      </span>
      <CommitLink
        commitId="f7f395d14b2fe29a4e253bf1d3094d61e6ad4434"
        repository={
          Object {
            "externalSlug": "example/repo-name",
            "id": "4",
            "name": "example/repo-name",
            "provider": "github",
            "status": "active",
            "url": "https://github.com/example/repo-name",
          }
        }
      />
      <StyledTimeSince
        date="2018-11-30T18:46:31Z"
        suffix="ago"
      />
    </span>
  </p>
</div>
`;

exports[`ResolutionBox render() handles inNextRelease 1`] = `
<div
  className="box"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "paddingBottom": 15,
    }
  }
>
  <span
    className="icon icon-checkmark"
    style={
      Object {
        "position": "static",
        "top": 0,
      }
    }
  />
  <p
    className="truncate break-all"
    style={
      Object {
        "paddingBottom": 0,
        "paddingLeft": 16,
      }
    }
  >
    This issue has been marked as resolved in the upcoming release.
  </p>
</div>
`;

exports[`ResolutionBox render() handles inNextRelease with actor 1`] = `
<div
  className="box"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "paddingBottom": 15,
    }
  }
>
  <span
    className="icon icon-checkmark"
    style={
      Object {
        "position": "static",
        "top": 0,
      }
    }
  />
  <p
    className="truncate break-all"
    style={
      Object {
        "paddingBottom": 0,
        "paddingLeft": 16,
      }
    }
  >
    <span
      key="3"
    >
      <strong
        key="0"
      >
        <UserAvatar
          className="avatar"
          gravatar={false}
          size={20}
          user={
            Object {
              "email": "david@sentry.io",
              "id": "111",
              "name": "David Cramer",
            }
          }
        />
        <span
          style={
            Object {
              "marginLeft": 5,
            }
          }
        >
          David Cramer
        </span>
      </strong>
      <span
        key="1"
      >
         marked this issue as resolved in the upcoming release.
      </span>
    </span>
  </p>
</div>
`;

exports[`ResolutionBox render() handles inRelease 1`] = `
<div
  className="box"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "paddingBottom": 15,
    }
  }
>
  <span
    className="icon icon-checkmark"
    style={
      Object {
        "position": "static",
        "top": 0,
      }
    }
  />
  <p
    className="truncate break-all"
    style={
      Object {
        "paddingBottom": 0,
        "paddingLeft": 16,
      }
    }
  >
    <span
      key="4"
    >
      <span
        key="0"
      >
        This issue has been marked as resolved in version 
      </span>
      <Version
        anchor={true}
        key="1"
        orgId="org"
        version="1.0"
      />
      <span
        key="2"
      >
        .
      </span>
    </span>
  </p>
</div>
`;

exports[`ResolutionBox render() handles inRelease with actor 1`] = `
<div
  className="box"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "paddingBottom": 15,
    }
  }
>
  <span
    className="icon icon-checkmark"
    style={
      Object {
        "position": "static",
        "top": 0,
      }
    }
  />
  <p
    className="truncate break-all"
    style={
      Object {
        "paddingBottom": 0,
        "paddingLeft": 16,
      }
    }
  >
    <span
      key="5"
    >
      <strong
        key="0"
      >
        <UserAvatar
          className="avatar"
          gravatar={false}
          size={20}
          user={
            Object {
              "email": "david@sentry.io",
              "id": "111",
              "name": "David Cramer",
            }
          }
        />
        <span
          style={
            Object {
              "marginLeft": 5,
            }
          }
        >
          David Cramer
        </span>
      </strong>
      <span
        key="1"
      >
         marked this issue as resolved in version 
      </span>
      <Version
        anchor={true}
        key="2"
        orgId="org"
        version="1.0"
      />
      <span
        key="3"
      >
        .
      </span>
    </span>
  </p>
</div>
`;
